# ToyModelPlayground

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: game_of_life.py  main.py  model_registry.py  run_service.py  schemas.py
backend/tests/: test_game_of_life.py  test_get_models.py  test_health.py  test_runs.py
frontend/src/: App.css  App.tsx
